# piano-vision-fingering-generator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  dev.ipynb  pyproject.toml
data/: zeldas_lullably.xml
data/zeldas_lullaby/: zeldas_lullaby_piano_vision.json  zeldas_lullaby_piano_vision_with_fingerings.json
src/piano_vision_fingering_generator/: __init__.py  ai.py  cli.py  constants.py  generator.py  gui.py  io.py  main.py  models.py  utils.py
src/piano_vision_fingering_generator/midi/: __init__.py  generate_fingerings.py
src/piano_vision_fingering_generator/piano_vision/: __init__.py  io.py  models.py
tests/: test_generator.py  test_models.py
