[project]
name = "piano-vision-fingering-generator"
version = "0.1.0"
description = "Piano fingering generator for PianoVision"
authors = [{ name = "Thomas Meyer", email = "thomas@thomasmeyer.co" }]
dependencies = [
    "music21>=9.1.0",
    "pydantic>=2.8.2",
    "pianoplayer>=2.2.1",
    "tqdm>=4.66.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "ipython>=8.26.0",
    "jupyterlab>=4.2.4",
    "pandas>=2.2.2",
    "ipywidgets>=8.1.3",
    "erdantic>=1.0.4",
]
