[project]
name = "piano-vision-fingering-generator"
version = "0.1.0"
description = "Piano fingering generator for PianoVision"
authors = [{ name = "Thomas Meyer", email = "thomas@thomasmeyer.co" }]
dependencies = [
    "music21>=9.1.0",
    "pydantic>=2.8.2",
    "pianoplayer>=2.2.1",
    "tqdm>=4.66.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
pv-fingering-generator = "piano_vision_fingering_generator.cli:main"
pv-fingering-generator-gui = "piano_vision_fingering_generator.gui:run_app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.2",
    "ipython>=8.26.0",
    "jupyterlab>=4.2.4",
    "pre-commit>=3.8.0",

]

[tool.ruff]
# Ruff settings
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]
fix = true
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "build",
    "dist",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
