# Build configuration
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/piano_vision_fingering_generator/__init__.py"

# Project configuration

[project]
name = "piano-vision-fingering-generator"
description = "Piano fingering generator for PianoVision"
authors = [{ name = "Thomas Meyer", email = "thomas@thomasmeyer.co" }]
dependencies = [
    "music21>=9.1.0",
    "pydantic>=2.8.2",
    "pianoplayer>=2.2.1",
    "tqdm>=4.66.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

[project.optional-dependencies]
ai = [
    "huggingface>=0.0.1",
    "transformers>=4.44.2",
    "torch>=2.4.1",
    "accelerate>=0.34.2",
    "bitsandbytes>=0.43.3",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.2",
    "ipython>=8.26.0",
    "jupyterlab>=4.2.4",
    "pre-commit>=3.8.0",
]

[project.scripts]
pv-fingering-generator = "piano_vision_fingering_generator.cli:main"
pv-fingering-generator-gui = "piano_vision_fingering_generator.gui:run_app"

# Tool configuration

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
fixable = ["E", "F", "B", "I"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
